--- a/admin/css/mu-forms-admin.css
+++ b/admin/css/mu-forms-admin.css
@@ -2,3 +2,11 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+.shortcode-usage{
+	margin: 10px 0;	
+}
+.shortcode-usage span{
+	font-size: 18px;
+	font-weight: bold;
+}
